--- a/trunk/simulations-java/simulations/gene-expression-basics/data/gene-expression-basics/gene-expression-basics.properties
+++ b/trunk/simulations-java/simulations/gene-expression-basics/data/gene-expression-basics/gene-expression-basics.properties
@@ -1,7 +1,7 @@
 #created by edu.colorado.phet.buildtools.util.ProjectPropertiesFile
-#Fri Sep 09 10:20:18 MDT 2011
-version.revision=56347
+#Tue Nov 29 16:54:02 MST 2011
+version.revision=58848
 version.minor=00
-version.timestamp=1315585218
+version.timestamp=1322610842
+version.dev=09
 version.major=0
-version.dev=08
